# FaciesGAN

./: .flake8  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  Makefile  README.md  apex_utils.py  background_workers.py  check_py_fake.py  color_encoder.py  compare_png.py  compare_scales.py  config.py  data_files.py  dataset.py  facies_dataset.py  gen_facies.py  gen_pyramids.py  generate.py  launch_tensorboard.sh  log.py  main.py  metrics.py  mypy.ini  ops.py  options.py  protocols.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  resume.py  tensorboard_visualizer.py  train.py  typedefs.py  types-requirements.txt  utils.py  validate.py  validation.py
.github/prompts/: plan-integrateNvidiaApex.prompt.md
code/: readme.txt
data/Gslibdata/: 250TI.gslib  nostationary.gslib
data/facies/: xz_crossline_000.pt  xz_crossline_001.pt  xz_crossline_002.pt  xz_crossline_003.pt  xz_crossline_004.pt  xz_crossline_005.pt  xz_crossline_006.pt  xz_crossline_007.pt  xz_crossline_008.pt  xz_crossline_009.pt  xz_crossline_010.pt  xz_crossline_011.pt  xz_crossline_012.pt  xz_crossline_013.pt  xz_crossline_014.pt  xz_crossline_015.pt  xz_crossline_016.pt  xz_crossline_017.pt  xz_crossline_018.pt  xz_crossline_019.pt  xz_crossline_020.pt  xz_crossline_021.pt  xz_crossline_022.pt  xz_crossline_023.pt  xz_crossline_024.pt  xz_crossline_025.pt  xz_crossline_026.pt  xz_crossline_027.pt  xz_crossline_028.pt  xz_crossline_029.pt  xz_crossline_030.pt  xz_crossline_031.pt  xz_crossline_032.pt  xz_crossline_033.pt  xz_crossline_034.pt  xz_crossline_035.pt  xz_crossline_036.pt  xz_crossline_037.pt  xz_crossline_038.pt  xz_crossline_039.pt  (+160 more)
data/wells/: wells_maping.npz
datasets/: GenTIs.py  __init__.py  base.py  batch.py  data_files.py  data_prefetcher.py  geological_facies_dataset.py  helper.py  utils.py
datasets/mlx/: data_prefetcher.py  dataset.py  utils.py
datasets/torch/: __init__.py  data_prefetcher.py  dataset.py  utils.py
faciesgan-c/: data_files.h  main.c  options.c  options.h  options.h.bak  plan.txt  trainer.c  trainer.c.bak  trainer.h.bak  utils.c  utils.h  utils_extra.c  utils_extra.h
faciesgan-c/cli/: cli_args.c  cli_args.c.bak  cli_args.h  cli_defs.c  cli_defs.c.bak  cli_defs.h.bak  cli_help.c.bak  cli_help.h.bak  cli_opts.h  cli_opts.h.bak  options_builder.c  options_builder.c.bak  options_builder.h
faciesgan-c/datasets/: c_generator.c  c_generator.h  collate.c  collate.c.bak  collate.h  collate.h.bak  data_files.h  dataloader.c  dataloader.h  func_cache.c  func_cache.h  mlx_dataset.c  mlx_dataset.h  mlx_dataset.h.bak  mlx_pyramids_dataset.c  mlx_pyramids_dataset.h  prefetcher.c  prefetcher.h  utils.c  utils.c.bak  utils.h  wells.c  wells.h
faciesgan-c/io/: npz_create.c  npz_create.h  npz_create.h.bak  npz_unzip.c  npz_unzip.h
faciesgan-c/models/: Makefile  base_adapter.c  base_adapter.c.bak  base_manager.c  base_manager.h  custom_layer.c  custom_layer.c.bak  custom_layer.h  custom_layer.h.bak  discriminator.c  discriminator.c.bak  discriminator.h  example_main.c  example_main.c.bak  example_train.c  facies_gan.c  facies_gan.h  generator.c  generator.h  rng_digest.cpp
faciesgan-c/tools/: c_trainer_smoke.c  compare_direct.c  compare_parity.py  dataloader_sampler_test.c  facies_worker.c  gen_cache.c  generate_test_npz.py  prefetcher_test.c
faciesgan-c/trainning/: array_helpers.c  array_helpers.h  autodiff.c  autodiff.c.bak  autodiff.h  c_trainer.c  c_trainer.h  c_trainer_api.c  c_trainer_api.h  checkpoint.c  checkpoint.c.bak  checkpoint.h.bak  common_helpers.c.bak  common_helpers.h  diag_mlx.h  diag_mlx.h.bak  example_train_from_ag.c  logger.c  logger.c.bak  logger.h.bak  mem_debug.c  mem_debug.c.bak  mem_debug.h  mem_debug.h.bak  metrics.c  metrics.h  mlx_compat.c  mlx_compat.c.bak  mlx_compat.h  mlx_compat.h.bak  mlx_error_trace.c  mlx_error_trace.c.bak  mlx_native_grad.c  mlx_native_grad.h  mlx_native_grad.h.bak  mlx_trainer_api.c  mlx_trainer_api.h  one_step_adam_test.c  optimizer.c  optimizer.c.bak  (+23 more)
interpolators/: base.py  color_encoder.py  config.py  nearest.py  neural.py  well.py
models/: __init__.py  base.py  custom_layer.py  discriminator.py  facies_gan.py  generator.py  types.py
models/mlx/: custom_layer.py  discriminator.py  facies_gan.py  generator.py  utils.py
models/torch/: __init__.py  custom_layer.py  discriminator.py  facies_gan.py  generator.py  utils.py
results/2025_03_25_08_28_23_facies_gan/: log.txt  options.json
results/2025_03_25_08_28_23_facies_gan/0/: discriminator.pth  generator.pth  masks.pth  opt_D.pth  opt_G.pth  rec_noise.pth  shape.pth
results/2025_03_25_08_28_23_facies_gan/1/: discriminator.pth  generator.pth  masks.pth  noise_amp.txt  opt_D.pth  opt_G.pth  rec_noise.pth  sch_G.pth  shape.pth
results/2025_03_25_08_28_23_facies_gan/2/: discriminator.pth  generator.pth  masks.pth  noise_amp.txt  opt_D.pth  opt_G.pth  rec_noise.pth  shape.pth
results/2025_03_25_08_28_23_facies_gan/3/: discriminator.pth  generator.pth  masks.pth  noise_amp.txt  opt_D.pth  opt_G.pth  rec_noise.pth  shape.pth
results/2025_11_28_08_16_47_results/: log.txt  options.json
results/2025_11_28_08_17_27_results/: log.txt  options.json
results/2025_11_28_08_19_42_results/: log.txt  options.json
results/2025_11_28_15_06_37_results/: log.txt  options.json
results/2025_11_28_16_27_01_results/: log.txt  options.json
results/2025_11_28_16_28_56_results/: options.json
results/2025_11_28_16_29_28_results/: options.json
results/2025_11_28_16_36_04_results/: options.json
results/2025_11_28_16_39_29_results/: options.json
results/2025_11_28_16_44_19_results/: options.json
results/2025_11_28_16_49_46_results/: log.txt  options.json
scripts/: install-dev.sh  setup-subrepo.sh
tools/: gen_mlx_cache.py
training/: __init__.py  base.py  metrics.py
training/mlx/: collate.py  schedulers.py  train.py  trainer.py
training/torch/: __init__.py  train.py  trainer.py
trainning/: __init__.py  base.py  metrics.py
trainning/mlx/: collate.py  trainer.py
trainning/torch/: __init__.py  trainer.py
(+41 files in other folders)
